# braid-py

./: .editorconfig  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_RTD.md  SECURITY.md  pyproject.toml  requirements-dev.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
braid/: __init__.py  generator.py  module.py  parser.py
docs/: index.md  installation.md
examples/: basic_usage.py  gsm8k_example.py  optimization_example.py
tests/: test_generator.py  test_integration.py  test_module.py  test_optimizer.py  test_parser.py  test_utils.py
